Add validation layer
